# OOP_Labs

lab_1/: main.cpp
lab_2/: CMakeLists.txt  main.cpp
lab_2/cmake_files/: CMakeCache.txt  Makefile  cmake_install.cmake  main  test_init  test_opers
lab_2/cmake_files/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab_2/cmake_files/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab_2/cmake_files/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab_2/lib/: Twelve.h
lab_2/lib_init/: Twelve.cpp
lab_2/tests/: test_inicialization.cpp  test_operations.cpp
lab_3/: CMakeLists.txt  main.cpp
lab_3/cmake_files/: CMakeCache.txt  Makefile  area  changing  cmake_install.cmake  main
lab_3/cmake_files/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab_3/cmake_files/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab_3/cmake_files/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab_3/lib/: figures.cpp
lab_3/tests/: area.cpp  changing.cpp
lab_4/: CMakeLists.txt  main.cpp
lab_4/cmake_files/: CMakeCache.txt  Makefile  area  changing  cmake_install.cmake  main
lab_4/cmake_files/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab_4/cmake_files/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab_4/lib/: array.cpp  figure_init.cpp  figures.cpp
lab_4/tests/: area.cpp  changing.cpp
lab_5/: CMakeLists.txt  (+1 more)
lab_6/: CMakeLists.txt  main.cpp
lab_6/cmake_files/: CMakeCache.txt  Makefile  btest  cmake_install.cmake  files  log.txt  main  npcs.txt
lab_6/cmake_files/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab_6/lib/: factory.cpp  file_functions.cpp  main_lib.cpp
lab_6/tests/: battle_test.cpp  save_load_test.cpp
(+61 files in other folders)
