include_directories(lib)
add_subdirectory(googletest)
add_library(class lib_init/Twelve.cpp)
add_executable(main main.cpp)
add_executable(test_init tests/test_inicialization.cpp)
add_executable(test_opers tests/test_operations.cpp)
target_link_libraries(main class gtest_main)
target_link_libraries(test_init class gtest_main)
target_link_libraries(test_opers class gtest_main)
