include_directories(lib)
add_subdirectory(googletest)
add_library(figures lib/figures.cpp)
add_executable(main main.cpp)
add_executable(changing tests/changing.cpp)
add_executable(area tests/area.cpp)
target_link_libraries(main figures)
target_link_libraries(changing figures gtest_main)
target_link_libraries(area figures gtest_main)
