include_directories(lib)
add_subdirectory(googletest)
add_library(figure_init lib/figure_init.cpp)
add_library(figures lib/figures.cpp)
#add_library(array lib/array.cpp)
add_executable(main main.cpp)
add_executable(changing tests/changing.cpp)
add_executable(area tests/area.cpp)
target_link_libraries(main figure_init figures array)
target_link_libraries(changing figures gtest_main)
target_link_libraries(area figures gtest_main)
