include_directories(lib)
include_directories(tests)
add_subdirectory(googletest)
add_library(mainlib lib/main_lib.cpp)
add_library(factory lib/factory.cpp)
add_library(functions lib/file_functions.cpp)
add_executable(main main.cpp)
add_executable(btest tests/battle_test.cpp)
add_executable(files tests/save_load_test.cpp)
target_link_libraries(main functions factory mainlib)
target_link_libraries(btest functions factory mainlib gtest_main)
target_link_libraries(files functions factory mainlib gtest_main)
